# aura

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  rusty-hook.toml  vite.config.ts  vitest.config.ts
src/: App.css  App.tsx  (+1 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  readme.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 10_create_view_fiat_ramp_conversion.sql  11_add_non_working_day_to_exchange_rate.sql  12_update_view_fiat_ramp_conversion.sql  13_create_table_crypto_exchanger.sql  14_create_table_asset.sql  15_create_table_asset_crypto_exchanger.sql  2_create_asset.sql  2_create_table_fiat.sql  3_create_fiat.sql  4_sys_tracker.sql  5_create_table_fiat_exchange_rate.sql  5_create_table_fiat_ramp.sql  5_fiat_ramp_transaction.sql  6_create_table_fiat_rate.sql  6_fiat_rate.sql  7_create_table_fiat_rate_missing.sql  7_create_table_user_settings.sql  8_add_is_estimated_to_exchange_rate.sql  8_create_table_fiat_rate_missing.sql  8_create_view_fiat_ramp_conversion.sql  8_fiat_ramp_view.sql  9_create_view_fiat_ramp_summary.sql  9_view_fiat_ramp_summary.sql
src-tauri/src/: db.rs  lib.rs  main.rs  sys_tracker.rs  utils.rs
src-tauri/src/crypto_asset/: error.rs  models.rs  service.rs
src-tauri/src/crypto_exchange/: coingecko.rs  error.rs  mod.rs  models.rs  service.rs  traits.rs
src-tauri/src/fiat/: command.rs  frankfurter_api.rs  mod.rs
src-tauri/src/fiat_exchanger/: frankfurter_exchanger.rs  mod.rs
src-tauri/src/fiat_ramp/: command.rs  mod.rs
src-tauri/src/fiat_rate/: command.rs  mod.rs
(+68 files in other folders)
