[package]
name = "aura"
version = "0.1.0"
description = "Auro the crypto tracking asset app"
authors = ["Darwin Subramaniam <darwinsubramaniam@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15.7"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
    "json",
    "migrate",
] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
chrono = { version = "0.4.42", features = ["serde"] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
anyhow = "1.0.100"
rust_decimal = "1.39.0"
futures = "0.3.31"

[dev-dependencies]
rusty-hook = "^0.11.2"
mockall = "0.14.0"
rand = "0.9.2"
